syntax = "proto3";

package WW;

// 快照键值对条目
message RaftSnapshotEntry {
    string key = 1;                             // 键
    string value = 2;                           // 值
}

// 快照数据
message RaftSnapshotData {
    repeated RaftSnapshotEntry entries = 1;     // 键值对数组
}
